--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <link rel="stylesheet" href="build/css/app.css">
 </head>
 <body>
-    <h1>Kenaz is sleeping</h1>
+    <header class="header">
+        <div class="contenedor contenido-header">
+            <h1>Rock & EDM Festival</h1>
+
+            <nav class="navegacion-principal">
+                <a href="#">Line Up</a>
+                <a href="#">Galleria</a>
+                <a href="#">Entradas</a>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
