--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Rock & EDM Festival</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="build/css/app.css">
 </head>
 <body>
@@ -23,7 +23,14 @@
         </div>
     </header>
 
-    <video 
+    <div class="video">
+        <div class="overlay">
+            <div class="contenedor contenido-video">
+                <h2>Rock & EDM Festival</h2>
+                <p>Julio 2023, Atenas</p>
+            </div>
+        </div>
+        <video 
         autoplay 
         muted
         loop
@@ -37,7 +44,20 @@
         <source 
             src="video/concierto.webm"
             type="video/webm">
-        
     </video>
+    </div>
+
+    <section class="contenedor sobre-festival">
+        <div class="imagen">
+            <img src="img/imagen_vocalista.jpg" alt="imagen vocalista festival">
+        </div>
+        <div class="contenido-festival">
+            <h2>Rock & EDM Festival</h2>
+            <p class="fecha">Julio 2023, Atenas</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, officiis quidem. Et, nulla corrupti autem, nostrum quas id harum laboriosam delectus exercitationem quae amet minima neque quia consequatur eveniet tempore!</p>
+        </div>
+
+    </section>
 </body>
 </html>
+        
